Added Mocha namespace to composer.json

--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,11 @@
             "email": "lukepurplehayes@gmail.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "autoload": {
+
+        "psr-4": {
+            "Mocha\\" : "Mocha/"
+        }
+    }
 }
