Added Symfony/var-dumper and Symfony/yaml to project

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
         }
     ],
 
-    "require": {},
+    "require": {
+        "symfony/var-dumper": "^4.3",
+        "symfony/yaml": "^4.3"
+    },
     "autoload": {
 
         "psr-4": {
