--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,10 @@
         "symfony/var-dumper": "^4.3",
         "symfony/yaml": "^4.3"
     },
-    "autoload": {
 
+    "autoload": {
         "psr-4": {
-            "Mocha\\" : "Mocha/",
-            "Mocha\\Annotation\\" : "Mocha/Annotation/"
+            "Mocha\\": "Mocha/"
         }
     }
 }
