Added Mocha\Annotation namespace and Annotation class

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 
     "autoload": {
         "psr-4": {
-            "Mocha\\": "Mocha/"
+            "Mocha\\": "Mocha/",
+            "Mocha\\Annotatio\\": "Mocha/Annotation/"
         }
     }
 }
