Renamed Mocha\Collections to Mocha\Collection

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "psr-4": {
             "Mocha\\": "Mocha/",
             "Mocha\\Annotation\\": "Mocha/Annotation/",
-            "Mocha\\Collections\\": "Mocha/Collections/",
+            "Mocha\\Collection\\": "Mocha/Collection/",
             "Mocha\\Parser\\": "Mocha/Parser/",
             "Mocha\\Reader\\": "Mocha/Reader/",
             "Mocha\\Exception\\": "Mocha/Exception/"
