--- a/mocha-config.yaml
+++ b/mocha-config.yaml
@@ -3,6 +3,6 @@
 #
 
 search_dirs: "Mocha"
-template_dir: "Mocha/templates"
+template_dir: "front-end"
 site_url: "localhost:5000"
 site_title: "Default Mocha Build"
