generator.php added to autoloading inside composer.json

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
             "Mocha\\Parser\\": "Mocha/Parser/",
             "Mocha\\Reader\\": "Mocha/Reader/",
             "Mocha\\Exception\\": "Mocha/Exception/"
-        }
+        },
+        "files": [
+            "generator.php"
+        ]
     }
 }
